k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dojo
  labels:
    name: dojo
    app.kubernetes.io/part-of: dojo-manager
